fix alignment

--- a/style.css
+++ b/style.css
@@ -59,9 +59,8 @@
     grid-row: 2 / 4;
     display: grid;
     grid-template-rows: repeat(4, 1fr);
-    grid-column-gap: 4px;
-    grid-row-gap: 50px;
-    /* align-items: center; */
+    grid-gap: 50px;
+    align-items: center;
   }
   
   .sidebar .photo {
@@ -70,8 +69,8 @@
     font-size: 12px;
     font-weight: normal;
     border-radius: 10px;
-    /* text-align: center; */
-    /* height: 90%; */
+    padding-top: 10vh;
+    padding-bottom: 10vh;
   }
   
   
@@ -80,6 +79,8 @@
     color: black;
     font-size: 16px;
     font-weight: normal;
+    padding-top: 10vh;
+    padding-bottom: 10vh;
   }
   
   .nav {
@@ -93,7 +94,8 @@
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: 1fr;
-
+    height: 90%;
+    align-items: center;
   }
   
   .nav ul li {
@@ -129,7 +131,7 @@
     background-color: #FFFFFF;
     color: black;
     text-align: center;
-    height: 150px;
+    height: 200px;
     width: 
     /* grid-column: span 1; */
   }
